--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest"
+    "test": "vitest",
+    "base": "/mood/"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.25.1",
